<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".home.sharedialog.ShareDialog">

    <data>
        <import type="android.view.View"/>
        <variable
            name="shareDialog"
            type="ysrtp.party.app.home.SingleArticle"/>
    </data>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="center"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold"
            android:text="@string/close"
            android:layout_margin="@dimen/_5sdp"
            android:drawableRight="@drawable/ic_close"
            android:drawableEnd="@drawable/ic_close"/>
        <TextView
            android:id="@+id/tv_title_shared_already"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_10sdp"
            android:textSize="@dimen/_16sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:textStyle="bold" />

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/flex_shared_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:flexWrap="wrap">

            <TextView
                android:id="@+id/tv_whatsapp_shared"
                android:drawableTop="@drawable/ic_whatsapp"
                android:text="@string/whatsapp"
                android:drawablePadding="@dimen/_5sdp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="@dimen/_5sdp"/>


            <TextView
                android:id="@+id/tv_facebook_shared"
                android:drawableTop="@drawable/ic_facebook"
                android:text="@string/facebook"
                android:drawablePadding="@dimen/_5sdp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="@dimen/_5sdp"/>

            <TextView
                android:id="@+id/tv_instagram_shared"
                android:drawableTop="@drawable/ic_instagram"
                android:text="@string/instagram"
                android:visibility="gone"
                android:drawablePadding="@dimen/_5sdp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="@dimen/_5sdp"/>


            <TextView
                android:id="@+id/tv_twitter_shared"
                android:drawableTop="@drawable/ic_twitter"
                android:text="@string/twitter"
                android:drawablePadding="@dimen/_5sdp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="@dimen/_5sdp"/>

            <TextView
                android:id="@+id/tv_share_chat_shared"
                android:drawableTop="@drawable/ic_share_chat"
                android:text="@string/share_chat"
                android:visibility="gone"
                android:drawablePadding="@dimen/_5sdp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="@dimen/_5sdp"/>

        </com.google.android.flexbox.FlexboxLayout>

        <View
            android:id="@+id/divider"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:layout_width="match_parent"
            android:background="@color/black"
            android:layout_height="2dp"/>
        <TextView
            android:id="@+id/tv_title_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_10sdp"
            android:textSize="@dimen/_16sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:textStyle="bold" />

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:flexWrap="wrap">

            <TextView
                android:id="@+id/tv_whatsapp"
                android:drawableTop="@drawable/ic_whatsapp"
                android:text="@string/whatsapp"
                android:drawablePadding="@dimen/_5sdp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="@dimen/_5sdp"/>


            <TextView
                android:id="@+id/tv_facebook"
                android:drawableTop="@drawable/ic_facebook"
                android:text="@string/facebook"
                android:drawablePadding="@dimen/_5sdp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="@dimen/_5sdp"/>

            <TextView
                android:id="@+id/tv_instagram"
                android:drawableTop="@drawable/ic_instagram"
                android:text="@string/instagram"
                android:visibility="gone"
                android:drawablePadding="@dimen/_5sdp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="@dimen/_5sdp"/>


            <TextView
                android:id="@+id/tv_twitter"
                android:drawableTop="@drawable/ic_twitter"
                android:text="@string/twitter"
                android:drawablePadding="@dimen/_5sdp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="@dimen/_5sdp"/>

            <TextView
                android:id="@+id/tv_share_chat"
                android:drawableTop="@drawable/ic_share_chat"
                android:text="@string/share_chat"
                android:visibility="gone"
                android:drawablePadding="@dimen/_5sdp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="@dimen/_5sdp"/>

            <TextView
                android:id="@+id/tv_more"
                android:drawableTop="@drawable/ic_more"
                android:text="@string/other_apps"
                android:drawablePadding="@dimen/_5sdp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="@dimen/_5sdp"/>

        </com.google.android.flexbox.FlexboxLayout>
    </LinearLayout>
</layout>