<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".verifyotp.VerifyOtpActivity">
    <data>
        <import type="android.text.Html"/>
        <variable
            name="verifyOtp"
            type="ysrtp.party.app.verifyotp.VerifyOtpStatus"/>
    </data>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@color/white">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@mipmap/ic_launcher"
            android:contentDescription="@string/app_name"/>

        <TextView
            android:id="@+id/tv_otp_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/enter_otp_text"
            android:gravity="center"
            android:textSize="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:textColor="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_one"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginStart="@dimen/_40sdp"
            android:layout_marginEnd="@dimen/_40sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_otp_title"
            android:textColorHint="@color/gray">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_otp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:background="@color/white"
                android:letterSpacing="1"
                android:gravity="center"
                android:textSize="@dimen/_20sdp"
                android:inputType="number"
                android:textColor="@color/gray"
                android:hint="@string/hint_enter_otp"
                tools:targetApi="lollipop" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            style="@style/MyButton"
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25sdp"
            android:text="@string/submit"
            android:layout_marginStart="@dimen/_40sdp"
            android:layout_marginEnd="@dimen/_40sdp"
            android:onClick="submitOTP"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_one"/>

        <com.google.android.material.button.MaterialButton
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:foreground="?android:attr/selectableItemBackground"
            android:id="@+id/btn_resend_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text='@{Html.fromHtml(@string/resend)}'
            android:textSize="16sp"
            android:textAllCaps="false"
            app:rippleColor="@color/colorPrimary"
            android:layout_margin="@dimen/_40sdp"
            android:onClick="resendOTP"
            android:textColor="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_submit"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


        <include android:id="@+id/layout_loading"
            layout="@layout/loading_screen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </FrameLayout>
</layout>